--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,10 +27,13 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install pyinstaller
+          pip install pyinstaller pytest psutil
 
       - name: Run tests
         run: pytest -v
+
+      - name: Run single-instance test
+        run: pytest -v tests/test_single_instance.py
 
       - name: Bump version
         id: version
