--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,8 +31,8 @@ jobs:
 
       - name: Run tests
         env:
-          PYTHONPATH: .
-        run: pytest -v
+          PYTHONPATH: ${{ github.workspace }}
+          run: pytest -v  
 
       - name: Run single-instance test
         run: pytest -v tests/test_single_instance.py
