--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,7 +5,6 @@ on:
     branches: [main]
   pull_request:
   workflow_dispatch:
-  # Run when a tag is created (optional for manual release)
   release:
     types: [prereleased, released]
 
@@ -32,13 +31,14 @@ jobs:
       - name: Run tests
         env:
           PYTHONPATH: ${{ github.workspace }}
-          run: pytest -v  
+        run: pytest -v
 
       - name: Run single-instance test
         run: pytest -v tests/test_single_instance.py
 
       - name: Bump version
         id: version
+        shell: pwsh
         run: |
           $version = Get-Content version.txt
           $parts = $version.Split('.')
