--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,9 +5,12 @@ on:
     branches: [main]
   pull_request:
   workflow_dispatch:
-  # Run when a tag is created (optional for manual release)
   release:
     types: [prereleased, released]
+
+# 👇 Grant write permission to push commits
+permissions:
+  contents: write
 
 jobs:
   build:
@@ -17,6 +20,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -38,6 +43,7 @@ jobs:
 
       - name: Bump version
         id: version
+        shell: pwsh
         run: |
           $version = Get-Content version.txt
           $parts = $version.Split('.')
@@ -48,12 +54,15 @@ jobs:
           echo "Bumped version to $newVersion"
 
       - name: Commit version bump
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        shell: pwsh
         run: |
           git config --global user.name "github-actions"
-          git config --global user.email "actions@github.com"
+          git config --global user.email "github-actions@github.com"
           git add version.txt
-          git commit -m "Bump version to ${{ steps.version.outputs.version }}"
-          git push
+          git commit -m "Bump version to ${{ steps.version.outputs.version }}" || echo "No version change to commit"
+          git push origin main
 
       - name: Build executable
         run: |
