--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -76,7 +76,7 @@ jobs:
       - name: Create setup (Inno Setup)
         run: |
           echo "Building installer..."
-          "C:\Program Files (x86)\Inno Setup 6\ISCC.exe" setup_script.iss
+          "C:\Program Files (x86)\Inno Setup 6\ISCC.exe" MessengerActive.iss
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
