updating test and iss

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,6 +39,8 @@ jobs:
 
       - name: Bump version
         id: version
+        permissions:
+          contents: write
         run: |
           $version = Get-Content version.txt
           $parts = $version.Split('.')
