Updating tests and build.yml

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,7 @@ jobs:
     name: Test & Build Windows App
     runs-on: windows-latest
     outputs:
-      version: ${{ steps.version.outputs.version }}   # 👈 Expose version to other jobs
+      version: ${{ steps.version.outputs.version }}
 
     steps:
       - name: Checkout repository
@@ -80,7 +80,6 @@ jobs:
         with:
           name: MessengerActive-${{ steps.version.outputs.version }}
           path: dist/MessengerActive
-
 
   prerelease:
     name: Create Pre-Release
