--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -88,7 +88,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Debug build job output
+#      - name: Debug build job output
 #        run: echo "Build job version is: ${{ needs.build.outputs.version }}"
 
 #      - name: Attempt to download build artifact
