--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -78,46 +78,50 @@ jobs:
           name: MessengerActive-${{ steps.version.outputs.version }}
           path: dist/MessengerActive
 
-  prerelease:
-    name: Create Pre-Release
-    needs: build
-    runs-on: windows-latest
-    if: github.ref == 'refs/heads/main'
+prerelease:
+  name: Create Pre-Release
+  needs: build
+  runs-on: windows-latest
+  if: github.ref == 'refs/heads/main'
 
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+  steps:
+    - name: Checkout repository
+      uses: actions/checkout@v4
 
-      - name: Debug build job output
-        run: echo "Build job version is: ${{ needs.build.outputs.version }}"
+    - name: Debug build job output
+      shell: pwsh
+      run: Write-Host "Build job version is: $($env:BUILD_VERSION)"
+      env:
+        BUILD_VERSION: ${{ needs.build.outputs.version }}
 
-#      - name: Attempt to download build artifact
-#        id: download_artifact
-#        uses: actions/download-artifact@v4
-#        with:
-#          name: MessengerActive-${{ needs.build.outputs.version }}
-#          path: dist/MessengerActive
-#        continue-on-error: true
+    - name: Attempt to download build artifact
+      id: download_artifact
+      uses: actions/download-artifact@v4
+      with:
+        name: MessengerActive-${{ needs.build.outputs.version }}
+        path: dist/MessengerActive
+      continue-on-error: true
 
-      - name: Check if artifact was downloaded
-        run: |
-          if (Test-Path dist/MessengerActive) {
-            Write-Host "Artifact downloaded successfully."
-          } else {
-            Write-Host "Artifact not found, skipping pre-release creation."
-            exit 0
-          }
-        shell: pwsh
+    - name: Check if artifact was downloaded
+      shell: pwsh
+      run: |
+        if (Test-Path dist/MessengerActive) {
+          Write-Host "Artifact downloaded successfully."
+        } else {
+          Write-Host "Artifact not found, skipping pre-release creation."
+          exit 0
+        }
 
-      - name: Display downloaded files
-        run: dir dist/MessengerActive
+    - name: Display downloaded files
+      shell: pwsh
+      run: dir dist/MessengerActive
 
-      - name: Create Pre-release on GitHub
-        uses: softprops/action-gh-release@v2
-        with:
-          tag_name: v${{ needs.build.outputs.version }}
-          name: MessengerActive v${{ needs.build.outputs.version }}
-          prerelease: true
-          files: dist/MessengerActive/**
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - name: Create Pre-release on GitHub
+      uses: softprops/action-gh-release@v2
+      with:
+        tag_name: v${{ needs.build.outputs.version }}
+        name: MessengerActive v${{ needs.build.outputs.version }}
+        prerelease: true
+        files: dist/MessengerActive/**
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
