--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,6 +21,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          persist-credentials: true
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -48,11 +50,8 @@ jobs:
           $parts[-1] = [int]$parts[-1] + 1
           $newVersion = "$($parts -join '.')"
           Set-Content version.txt $newVersion
-          echo "version=$newVersion" >> $env:GITHUB_OUTPUT
+          echo "version=$newVersion" | Out-File -FilePath $env:GITHUB_OUTPUT -Encoding utf8
           Write-Host "Bumped version to $newVersion"
-
-      - name: Debug version output
-        run: echo "Version output is ${{ steps.version.outputs.version }}"
 
       - name: Commit version bump
         env:
@@ -75,53 +74,52 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: MessengerActive-${{ steps.version.outputs.version }}
+          name: "MessengerActive-${{ steps.version.outputs.version }}"
           path: dist/MessengerActive
 
-prerelease:
-  name: Create Pre-Release
-  needs: build
-  runs-on: windows-latest
-  if: github.ref == 'refs/heads/main'
+  prerelease:
+    name: Create Pre-Release
+    needs: build
+    runs-on: windows-latest
+    if: github.ref == 'refs/heads/main'
 
-  steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-    - name: Debug build job output
-      shell: pwsh
-      run: Write-Host "Build job version is: $($env:BUILD_VERSION)"
-      env:
-        BUILD_VERSION: ${{ needs.build.outputs.version }}
+      - name: Set BUILD_VERSION environment
+        run: echo "BUILD_VERSION=${{ needs.build.outputs.version }}" >> $GITHUB_ENV
 
-    - name: Attempt to download build artifact
-      id: download_artifact
-      uses: actions/download-artifact@v4
-      with:
-        name: MessengerActive-${{ needs.build.outputs.version }}
-        path: dist/MessengerActive
-      continue-on-error: true
+      - name: Debug build job output
+        shell: bash
+        run: echo "Build job version is $BUILD_VERSION"
 
-    - name: Check if artifact was downloaded
-      shell: pwsh
-      run: |
-        if (Test-Path dist/MessengerActive) {
-          Write-Host "Artifact downloaded successfully."
-        } else {
-          Write-Host "Artifact not found, skipping pre-release creation."
-          exit 0
-        }
+      - name: Check if artifact exists
+        shell: bash
+        run: |
+          if [ ! -d "dist/MessengerActive" ]; then
+            echo "Artifact not found! Exiting."
+            exit 1
+          fi
 
-    - name: Display downloaded files
-      shell: pwsh
-      run: dir dist/MessengerActive
+      - name: Download build artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: "MessengerActive-${{ needs.build.outputs.version }}"
+          path: dist/MessengerActive
 
-    - name: Create Pre-release on GitHub
-      uses: softprops/action-gh-release@v2
-      with:
-        tag_name: v${{ needs.build.outputs.version }}
-        name: MessengerActive v${{ needs.build.outputs.version }}
-        prerelease: true
-        files: dist/MessengerActive/**
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Display downloaded files
+        shell: bash
+        run: |
+          echo "Downloaded artifact contents:"
+          ls dist/MessengerActive
+
+      - name: Create Pre-release on GitHub
+        uses: softprops/action-gh-release@v2
+        with:
+          tag_name: "v${{ needs.build.outputs.version }}"
+          name: "MessengerActive v${{ needs.build.outputs.version }}"
+          prerelease: true
+          files: "dist/MessengerActive/**"
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
