--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,7 +48,8 @@ jobs:
           $parts[-1] = [int]$parts[-1] + 1
           $newVersion = "$($parts -join '.')"
           Set-Content version.txt $newVersion
-          echo "version=$newVersion" | Out-File -FilePath $env:GITHUB_OUTPUT -Encoding utf8
+          Write-Output "version=$newVersion" | Out-File -FilePath $env:GITHUB_OUTPUT -Encoding utf8
+          Write-Host "Bumped version to $newVersion"
 
       - name: Commit version bump
         env:
@@ -65,15 +66,14 @@ jobs:
 
       - name: Create setup (Inno Setup)
         run: |
+          echo "Building installer..."
           & "C:\Program Files (x86)\Inno Setup 6\ISCC.exe" "MessengerActive.iss"
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: MessengerActive-${{ steps.version.outputs.version }}
-          path: |
-            dist/MessengerActive/**
-            dist/MessengerActive.exe
+          name: "MessengerActive-${{ steps.version.outputs.version }}"
+          path: dist/MessengerActive
 
   prerelease:
     name: Create Pre-Release
@@ -85,27 +85,31 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Set build version
+        run: echo "BUILD_VERSION=${{ needs.build.outputs.version }}" >> $GITHUB_ENV
+
       - name: Download build artifact
         uses: actions/download-artifact@v4
         with:
-          name: MessengerActive-${{ needs.build.outputs.version }}
-          path: release/
+          name: "MessengerActive-${{ env.BUILD_VERSION }}"
+          path: release
 
       - name: Verify downloaded files
+        shell: pwsh
         run: |
-          echo "Downloaded files:"
-          dir release
-          if [ -z "$(ls -A release)" ]; then
-            echo "Error: No files found in release/ folder!"
+          Write-Host "Downloaded files:"
+          Get-ChildItem release
+          if (-Not (Get-ChildItem release)) {
+            Write-Error "Error: No files found in release/ folder!"
             exit 1
-          fi
+          }
 
       - name: Create Pre-release on GitHub
         uses: softprops/action-gh-release@v2
         with:
-          tag_name: v${{ needs.build.outputs.version }}
-          name: MessengerActive v${{ needs.build.outputs.version }}
+          tag_name: "v${{ env.BUILD_VERSION }}"
+          name: "MessengerActive v${{ env.BUILD_VERSION }}"
           prerelease: true
-          files: release/*
+          files: "release/**"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
