--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ permissions:
   contents: write
 
 env:
-  BUILD_DIR: dist/MessengerActive
+  BUILD_DIR: dist
   INSTALLER_NAME: MessengerActive_Setup.exe
 
 jobs:
@@ -66,12 +66,20 @@ jobs:
           git push origin HEAD:main
 
       - name: Build executable
-        run: pyinstaller --noconfirm --onedir --windowed --icon ma_icon.ico MessengerActive.py
+        run: |
+          pyinstaller --noconfirm --onedir --windowed --icon ma_icon.ico MessengerActive.py
+          if (-not (Test-Path "$env:BUILD_DIR/MessengerActive/MessengerActive.exe")) {
+            Write-Error "Executable not found after PyInstaller!"
+            exit 1
+          }
 
       - name: Create installer (Inno Setup)
         run: |
-          echo "Building installer..."
           & "C:\Program Files (x86)\Inno Setup 6\ISCC.exe" "MessengerActive.iss"
+          if (-not (Test-Path "$env:BUILD_DIR/$env:INSTALLER_NAME")) {
+            Write-Error "Installer not found after Inno Setup!"
+            exit 1
+          }
 
       - name: Archive source code
         run: |
@@ -108,6 +116,7 @@ jobs:
         run: |
           Write-Host "Downloaded files:"
           Get-ChildItem release | ForEach-Object { Write-Host $_.FullName }
+
           if (-not (Test-Path "release/MessengerActive_Setup.exe")) {
             Write-Error "Installer not found!"
             exit 1
