--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -73,23 +73,24 @@ jobs:
             Write-Error "Executable not found after PyInstaller!"
             exit 1
           }
-          Write-Host "Executable successfully built."
 
       - name: Create installer (Inno Setup)
         shell: pwsh
         run: |
+          Write-Host "Running Inno Setup compiler..."
           & "C:\Program Files (x86)\Inno Setup 6\ISCC.exe" "MessengerActive.iss"
-          $installerPath = "$env:INSTALLER_DIR/${{ env.INSTALLER_BASE_NAME }}.exe"
+
+          $installerPath = "D:\a\MessengerActive\MessengerActive\Output\MessengerActive_Setup.exe"
           if (-not (Test-Path $installerPath)) {
             Write-Error "Installer not found after Inno Setup! Expected at $installerPath"
             exit 1
           }
 
-          # Rename installer to include version number
           $version = "${{ steps.version.outputs.version }}"
-          $newInstaller = "$env:INSTALLER_DIR/${{ env.INSTALLER_BASE_NAME }}_$version.exe"
-          Rename-Item -Path $installerPath -NewName $newInstaller
-          Write-Host "Renamed installer to: $newInstaller"
+          $newInstallerName = "${{ env.INSTALLER_BASE_NAME }}_$version.exe"
+          $newInstallerPath = Join-Path $env:INSTALLER_DIR $newInstallerName
+          Rename-Item -Path $installerPath -NewName $newInstallerName
+          Write-Host "Renamed installer to: $newInstallerPath"
 
       - name: Archive source code
         run: |
@@ -101,7 +102,7 @@ jobs:
         with:
           name: messengeractive-artifacts
           path: |
-            ${{ env.INSTALLER_DIR }}/${{ env.INSTALLER_BASE_NAME }}_${{ steps.version.outputs.version }}.exe
+            Output/MessengerActive_Setup_*.exe
             source_code.zip
             source_code.tar.gz
 
@@ -127,7 +128,7 @@ jobs:
           Write-Host "Downloaded files:"
           Get-ChildItem release | ForEach-Object { Write-Host $_.FullName }
 
-          if (-not (Test-Path "release/${{ env.INSTALLER_BASE_NAME }}_${{ needs.build.outputs.version }}.exe")) {
+          if (-not (Test-Path "release/MessengerActive_Setup_*.exe")) {
             Write-Error "Installer not found!"
             exit 1
           }
@@ -139,7 +140,6 @@ jobs:
             Write-Error "Source tar.gz not found!"
             exit 1
           }
-          Write-Host "All expected files verified successfully."
 
       - name: Create Pre-release on GitHub
         uses: softprops/action-gh-release@v2
@@ -148,7 +148,7 @@ jobs:
           name: "MessengerActive v${{ needs.build.outputs.version }}"
           prerelease: true
           files: |
-            release/${{ env.INSTALLER_BASE_NAME }}_${{ needs.build.outputs.version }}.exe
+            release/MessengerActive_Setup_*.exe
             release/source_code.zip
             release/source_code.tar.gz
         env:
