--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -77,49 +77,68 @@ jobs:
       - name: Create installer (Inno Setup)
         shell: pwsh
         run: |
-          Write-Host "📦 Running Inno Setup compiler..."
+          Write-Host "Running Inno Setup compiler..."
           & "C:\Program Files (x86)\Inno Setup 6\ISCC.exe" "MessengerActive.iss"
 
           $installerPath = "D:\a\MessengerActive\MessengerActive\Output\MessengerActive_Setup.exe"
           if (-not (Test-Path $installerPath)) {
-            Write-Error "Installer not found after Inno Setup!"
+            Write-Error "Installer not found after Inno Setup! Expected at $installerPath"
             exit 1
           }
 
           $version = "${{ steps.version.outputs.version }}"
           $newInstallerName = "${{ env.INSTALLER_BASE_NAME }}_$version.exe"
-          Rename-Item -Path $installerPath -NewName $newInstallerName -Force
-          Write-Host "✅ Renamed installer to: Output\$newInstallerName"
+          Rename-Item -Path $installerPath -NewName $newInstallerName
+          Write-Host "Renamed installer to: Output\$newInstallerName"
 
       - name: Self-sign the installer
         shell: pwsh
         run: |
           Write-Host "🔏 Creating temporary code signing certificate..."
           $certPath = "$env:RUNNER_TEMP\temp_signing_cert.pfx"
-          $certSubject = "CN=MessengerActive Temporary Certificate"
           $password = "password123"
 
-          # Create a temporary self-signed cert
-          $cert = New-SelfSignedCertificate -DnsName "MessengerActive.local" -CertStoreLocation "Cert:\CurrentUser\My"
-          Export-PfxCertificate -Cert $cert -FilePath $certPath -Password (ConvertTo-SecureString -String $password -Force -AsPlainText)
+          # Create temporary self-signed certificate (LocalMachine store)
+          $cert = New-SelfSignedCertificate `
+              -DnsName "MessengerActive.local" `
+              -CertStoreLocation "Cert:\LocalMachine\My" `
+              -NotAfter (Get-Date).AddYears(1) `
+              -KeyExportPolicy Exportable `
+              -KeyLength 2048 `
+              -KeyAlgorithm RSA `
+              -HashAlgorithm SHA256
 
-          # Dynamically locate signtool.exe
-          $signtool = Get-ChildItem "C:\Program Files (x86)\Windows Kits" -Recurse -ErrorAction SilentlyContinue | Where-Object { $_.Name -eq "signtool.exe" } | Select-Object -First 1
+          # Export cert to .pfx
+          Export-PfxCertificate `
+              -Cert $cert `
+              -FilePath $certPath `
+              -Password (ConvertTo-SecureString -String $password -Force -AsPlainText)
+
+          # Locate signtool dynamically
+          $signtool = Get-ChildItem "C:\Program Files (x86)\Windows Kits" -Recurse -ErrorAction SilentlyContinue |
+              Where-Object { $_.Name -eq "signtool.exe" -and $_.FullName -match "x64" } |
+              Select-Object -First 1
 
           if (-not $signtool) {
-            Write-Error "❌ signtool.exe not found on this runner!"
-            exit 1
+              Write-Error "❌ signtool.exe not found on this runner!"
+              exit 1
           }
 
           Write-Host "✅ Found signtool at $($signtool.FullName)"
           $installer = Get-ChildItem "D:\a\MessengerActive\MessengerActive\Output" -Filter "MessengerActive_Setup_*.exe" | Select-Object -First 1
 
           if (-not $installer) {
-            Write-Error "❌ Installer file not found for signing!"
-            exit 1
+              Write-Error "❌ Installer file not found for signing!"
+              exit 1
           }
 
+          Write-Host "🔏 Signing $($installer.FullName)..."
           & $signtool.FullName sign /f $certPath /p $password /fd SHA256 /tr http://timestamp.digicert.com /td SHA256 $installer.FullName
+          if ($LASTEXITCODE -ne 0) {
+              Write-Error "❌ signtool failed to sign the installer!"
+              exit 1
+          }
+
           Write-Host "✅ Successfully self-signed installer."
 
       - name: Archive source code
@@ -155,19 +174,19 @@ jobs:
       - name: Verify downloaded files
         shell: pwsh
         run: |
-          Write-Host "📂 Downloaded files:"
+          Write-Host "Downloaded files:"
           Get-ChildItem -Recurse release | ForEach-Object { Write-Host $_.FullName }
 
-          if (-not (Get-ChildItem "release/Output" -Filter "MessengerActive_Setup_*.exe")) {
-            Write-Error "❌ Installer not found in release/Output/"
+          if (-not (Test-Path "release/Output/MessengerActive_Setup_*.exe")) {
+            Write-Error "Installer not found in release/Output/"
             exit 1
           }
           if (-not (Test-Path "release/source_code.zip")) {
-            Write-Error "❌ Source zip not found!"
+            Write-Error "Source zip not found!"
             exit 1
           }
           if (-not (Test-Path "release/source_code.tar.gz")) {
-            Write-Error "❌ Source tar.gz not found!"
+            Write-Error "Source tar.gz not found!"
             exit 1
           }
 
